hecho ej_columnas.html

--- a/Ejercicios-CSS/ej_columnas.html
+++ b/Ejercicios-CSS/ej_columnas.html
@@ -3,13 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Ejercicio Columnas</title>
+    <style>
+
+        #tituloPrincipal{
+            color: #ffec02
+        }
+        .tituloNoticia{
+            font-size: 30px
+        }
+        body{
+            font-family: Tahoma;
+        }
+        a:link, a:visited{
+            color: #4CAF50;
+        }
+        a:hover{
+            font-size: 1.4em;
+        }
+        a:active{
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
 <!--Cree los estilos CSS necesarios para que el texto se visualice en 2 columnas-->
 <header>
     <h1 id="tituloPrincipal">Diario On-line</h1>
 </header>
-<a href="ej_leyes.html" target="_blank">Legal</a>
+<a  href="ej_leyes.html" target="_blank">Legal</a>
 <section>
     <h3 class="tituloNoticia">CordoBici</h3>
     Publicado el 07/03/2018 en Agropecuarias y Ambiente
