hecho ej_cv.html

--- a/Ejercicios-CSS/ej_cv.html
+++ b/Ejercicios-CSS/ej_cv.html
@@ -2,16 +2,22 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>CV Nombre Apellido</title>
+    <title>Santiago Tricherri</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="imagenes/iconoCV.png">
+    <link rel="stylesheet" href="mi_estilo.css" type="text/css">
 </head>
 <body>
 
 <div>
+    <img id="principal"  src="imagenes/icono-persona-1.jpg">
     <h1>Nombre Alumno</h1>
     <h2>Ing. en Computacion</h2>
 </div>
 
-<div>
+<div class="especial">
     <h3>Datos Personales</h3>
     <p><span>Fecha de Nacimiento:</span> dd/mm/aaaa</p>
     <p><span>Email:</span> email@email.com</p>
