hecho ej_leyes.html

--- a/Ejercicios-CSS/ej_leyes.html
+++ b/Ejercicios-CSS/ej_leyes.html
@@ -1,8 +1,17 @@
-<!DOCTYPE html>
+¿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Ley 10.208 - Política Ambiental Provincial</title>
+    <style>
+        ol.titulo li{
+            list-style-type: upper-roman;
+            font-size: 2em;
+        }
+        ol.subitems li{
+            list-style-type: lower-alpha;
+        }
+    </style>
 </head>
 <body>
 <h1>La Legislatura de la Provincia de Córdoba</h1>
@@ -12,6 +21,7 @@
 <ol class="titulo">
     <li>Capítulo</li>
 </ol>
+
 
 <h3>Principios Generales</h3>
 <p><span>Artículo 1º.-</span> La  presente  Ley  determina  la  política  ambiental  provincial  y,  en
